--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>goit-js-hw-11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <form class="search-form" autocomplete="off">
+      <label>
+        <input
+          type="text"
+          name="text"
+          placeholder="Search images..."
+          autofocus
+        />
+      </label>
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+      <button class="search-btn" type="submit">Search</button>
+    </form>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <div class="gallery"></div>
+    <div class="gallery-loader" id="loader"></div>
 
     <script type="module" src="./main.js"></script>
   </body>
